--- a/Minecraft_QQ_Gui/InitWindow.xaml
+++ b/Minecraft_QQ_Gui/InitWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Minecraft_QQ_Gui"
         mc:Ignorable="d"
-        Title="初始化" Height="166" Width="317" Icon="/Minecraft_QQ.png" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="初始化" Height="166" Width="317" Icon="/Minecraft_QQ.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Rectangle Fill="#FFF4F4F5" Stroke="#FF5ABED6" StrokeThickness="2"/>
         <TextBlock Text="Minecraft_QQ正在初始化" FontSize="20" Margin="0,45,0,60" HorizontalAlignment="Center" TextAlignment="Center"/>
